- added attachment administration frontend (Anatoliy)
- added basic authentication support for LDAP groups (Thorsten)
- added basic support for HTML5 microdata (Thorsten)
- added functionality of the TinyMCE save button (Gustavo Solt)
- added basic reporting functionality (Gustavo Solt, Thorsten)
- added IPv6 support (David Soria Parra)
- added support for Single Sign On authentication (Thorsten)
- improved usability in frontend and administration backend (Thorsten)
- enabling Gzip compression by default (Thorsten, Lorenzo Milesi)
- updated bundled jQuery to version 1.5.1 (Thorsten)
- updated bundled Modernizr to version 1.7 (Thorsten)
- updated bundled TinyMCE to version 3.4.2 (Thorsten)
- updated bundled SyntaxHighlighter to version 3.0.83 (Thorsten)
- updated Dutch translation (ronald AT proudsites DOT com)
- updated German translation (Thorsten)
- fixed a lot of bugs (Thorsten)

Version 2.6.18 - 2011-07-
- updated Spanish translation

Version 2.6.17 - 2011-06-08
- updated Portuguese translation
- fixed minor bugs (Thorsten)

Version 2.6.16 - 2011-05-31
- updated Portuguese translation
- updated Dutch translation
- fixed minor bugs (Thorsten)

Version 2.6.15 - 2011-02-23
- added Malay translation (Ahmad Kamil Zailani)
- updated Danish translation
- updated Brazilian Portuguese translation
- updated Spanish translation (Martin Schenk)
- fixed minor bugs (Thorsten)

Version 2.6.14 - 2011-01-24
- added rewrite rules for nginx (Florian Anderiasch)
- added compatibility for MySQL 5.5 with ext/mysql (Thorsten)
- added support to ban IPs from user tracking files (Thorsten)
- improved restore functionality (Thorsten)
- updated Dutch translation (Hans)
- updated German translation (Thorsten)
- Fixed issue with sending mails to category administrators (Gustavo Solt)
- fixed minor bugs (Thorsten)

Version 2.6.13 - 2010-12-15
- clean package after compromised server (Thorsten)

Version 2.6.12 - 2010-12-13
- added experimental support for MariaDB (Thorsten)