@@ -22,6 +22,7 @@ Version 2.7.0-beta2 - 2011-06-22
 - added basic reporting functionality (Gustavo Solt, Thorsten)
 - added IPv6 support (David Soria Parra)
 - added support for Single Sign On authentication (Thorsten)
+- added support for complete secured FAQ installations (Thorsten)
 - improved usability in frontend and administration backend (Thorsten)
 - enabling Gzip compression by default (Thorsten, Lorenzo Milesi)
 - updated bundled jQuery to version 1.5.1 (Thorsten)
